# company-brain

./: .gitignore  CHANGELOG.md  LICENSE  PRD.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adoption-guide.md  competitive-archive.md  controlled-document-boundary.md  profiles.md  schema.md
docs/specs/: spec-primary-entity-marking.md  spec-research-agent.md  spec-strategic-model.md
examples/meddev-fictional/: .gitignore  README.md
examples/meddev-fictional/_branding/: README.md  colors.yaml
examples/meddev-fictional/_system/: EDGE-TYPES.md  FRONTMATTER-SCHEMA.md  INDEX.md  NODE-TYPES.md  PROFILE.md
examples/meddev-fictional/concepts/: concept-mobile-cardiac-telemetry.md  concept-predicate-device.md
examples/meddev-fictional/decisions/: decision-001-online-only-documentation.md  decision-002-prescription-only-not-otc.md  decision-003-7-day-wear-not-14-day.md
examples/meddev-fictional/exports/: MRD.docx  (+25 more)
examples/saas-fictional/: .gitignore  README.md
skills/atomize/: SKILL.md
skills/doc-generate/: SKILL.md
skills/intake/: SKILL.md
skills/maintain/: SKILL.md
skills/query/: SKILL.md
skills/vault-architect/: SKILL.md
skills/visualize/: SKILL.md
src/company_brain/: cli.py  install_skills.py  intake_helpers.py  maintain.py  query_helpers.py  scaffold.py  validator.py  vault.py  viewer.py
tests/: test_cli_describe_node.py  test_doc_questions.py  test_install_skills.py  test_intake_helpers.py  test_maintain.py  test_primary_selection.py  test_query_helpers.py  test_render_formats.py  test_render_mrd.py  test_render_one_pager.py  test_render_scaffolds.py  test_saas_example.py  test_scaffold.py  test_schema.py  test_validator.py  test_viewer.py
(+166 files in other folders)
