[project]
name = "company-brain"
version = "0.3.0"
description = "AI-native company knowledge graph. Obsidian-compatible markdown vault + Claude Code skills + Python CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "nemock" },
]
keywords = ["knowledge-graph", "obsidian", "claude-code", "medical-device", "infinite-brain"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "python-docx>=1.0",
    "pdfplumber>=0.10",
    "pillow>=10.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
cb = "company_brain.cli:main"

[project.urls]
Homepage = "https://github.com/nemock/company-brain"
Repository = "https://github.com/nemock/company-brain"
Issues = "https://github.com/nemock/company-brain/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/company_brain"]

[tool.hatch.build.targets.wheel.force-include]
"src/company_brain/templates" = "company_brain/templates"

[tool.ruff]
line-length = 100
target-version = "py310"
